--- a/index.html
+++ b/index.html
@@ -113,7 +113,7 @@
             const contenedor = document.getElementById("estado-local");
 
             if (abierto) {
-                mensaje.textContent = "Estamos ABIERTO";
+                mensaje.textContent = "ABIERTO";
                 contenedor.classList.add("abierto");
                 contenedor.classList.remove("cerrado");
             } else {
@@ -128,4 +128,5 @@
 
 </body>
 </html>
+
 
